Fix cutoff descriptions in voting dash cards

--- a/app/assets/stylesheets/2016/views/vote.sass
+++ b/app/assets/stylesheets/2016/views/vote.sass
@@ -27,6 +27,12 @@ form.filters
       text-transform: uppercase
       font-family: 'Montserrat-Regular'
       font-size: 14px
+  .card-frame
+    .card-content
+      height: 380px
+      .description
+        max-height: none
+
   &.developer footer
     background: $gold-light
     span
